gitops/cluster/private-origin-gateway/private-origin-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private-origin-gateway
  namespace: envoy-gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: '0'
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: private-origin-envoy-proxy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: internal-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
